# qmk_viewer

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  README.md  build-all.sh  build-macos-complete.sh  build-macos.sh  build-windows.ps1  fix-macos-app.sh  keymap.c  screen.mov  thooams.json
.github/workflows/: ci.yml  homebrew.yml  release.yml
scripts/: build-all.sh  build-linux.sh  build-macos-dev.sh  build-macos.sh  build-windows.bat  build-windows.ps1  collect-qmk-keymaps.sh  fix-macos-app.sh
src/: config.rs  config_persistence.rs  hid.rs  keyboard.rs  keycodes.rs  keymap_c.rs  lib.rs  main.rs  planck.rs  ui.rs
src/keyboards/: mod.rs  planck.rs
tests/: compatibility_report.md  compatibility_report.rs  comprehensive_compatibility_report.md  drag_drop.rs  file_loading.rs  generic_keyboard.rs  json.rs  keymap_c.rs  parser.rs  qmk_compatibility.rs  ui_rendering.rs  ui_rendering_report.md
tests/files/: keyboards.txt  thooams.json
