[package]
name = "qmk_viewer"
version = "0.1.0"
edition = "2021"
description = "Planck keyboard viewer for QMK with layer/pressed keys visualization"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
eframe = { version = "0.30", default-features = false, features = ["glow"] }
egui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

# Raw HID backend (optional at runtime). Rely on platform defaults for features.
hidapi = { version = "2", optional = true }
# QMK console (serial) backend
serialport = { version = "4", optional = true }

[dev-dependencies]
proptest = "1"

[features]
# Enable actual USB HID reading. Tests and headless builds can disable this.
rawhid = ["dep:hidapi"]
qmk_console = ["dep:serialport"]
